name:                client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/RobertFischer/client#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Fischer
maintainer:          smokejumperit@gmail.com
copyright:           Robert Fischer
category:            private
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable client
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
               ,       async >= 2.1.1 && < 3
               ,       time-units >= 1.0.0 && < 2
