name:                client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable webbench-client
  hs-source-dirs:      src
                        , ../lib
  main-is:             Main.hs
  other-modules:       API
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , aeson >= 0.11 && < 0.12
                        , async >= 2.1 && < 2.2
                        , bytestring >= 0.10 && < 0.11
                        , clock >= 0.7 && < 0.8
                        , concurrent-barrier >= 0.1 && < 0.2
                        , data-default >= 0.7 && < 0.8
                        , deepseq >= 1.4 && < 1.5
                        , http-client >= 0.4 && < 0.5
                        , http-querystring >= 1.0 && < 1.1
                        , http-types >= 0.9 && < 0.10
                        , random >= 1.1 && < 1.2
                        , servant >= 0.8 && < 0.9
                        , stm >= 2.4 && < 2.5
                        , text >= 1.2 && < 1.3
  ghc-options:         -Wall -Werror -O2 -threaded

