name:                webbench
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/client#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Hurt
maintainer:          bhurt42@gmail.com
copyright:           2017 Brian Hurt
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable webbench-server
  hs-source-dirs:      server
                        , lib
  main-is:             Main.hs
  other-modules:       API
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , aeson >= 0.11 && < 0.12
                        , postgresql-simple >= 0.5 && < 0.6
                        , resource-pool >= 0.2 && < 0.3
                        , servant >= 0.8 && < 0.9
                        , servant-server >= 0.8 && < 0.9
                        , text >= 1.2 && < 1.3
                        , warp >= 3.2 && < 3.3
                        , vector >= 0.11 && < 0.12
  ghc-options:          -O2 -threaded

executable webbench-client
  hs-source-dirs:      client
                        , lib
  main-is:             Main.hs
  other-modules:       API
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , aeson >= 0.11 && < 0.12
                        , async >= 2.1 && < 2.2
                        , bytestring >= 0.10 && < 0.11
                        , clock >= 0.7 && < 0.8
                        , concurrent-barrier >= 0.1 && < 0.2
                        , data-default >= 0.7 && < 0.8
                        , deepseq >= 1.4 && < 1.5
                        , http-client >= 0.4 && < 0.5
                        , http-querystring >= 1.0 && < 1.1
                        , http-types >= 0.9 && < 0.10
                        , random >= 1.1 && < 1.2
                        , servant >= 0.8 && < 0.9
                        , stm >= 2.4 && < 2.5
                        , text >= 1.2 && < 1.3
  ghc-options:         -Wall -Werror -O2 -threaded

executable webbench-docs
  hs-source-dirs:      docs
                        , lib
  main-is:             Main.hs
  other-modules:       API
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , blaze-html >= 0.8 && < 0.9
                        , markdown >= 0.1 && < 0.2
                        , data-default >= 0.7 && < 0.8
                        , aeson >= 0.11 && < 0.12
                        , servant >= 0.8 && < 0.9
                        , servant-docs >= 0.8 && < 0.9
                        , servant-js >= 0.8 && < 0.9
                        , servant-server >= 0.8 && < 0.9
                        , text >= 1.2 && < 1.3
                        , aeson-pretty
                        , servant-swagger
                        , bytestring >= 0.10 && < 0.11
                        , swagger2 >= 2.1 && < 2.2

