name:                server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable webbench-server
  hs-source-dirs:      src
                        , ../lib
  main-is:             Main.hs
  other-modules:       API
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , aeson >= 0.11 && < 0.12
                        , postgresql-simple >= 0.5 && < 0.6
                        , resource-pool >= 0.2 && < 0.3
                        , servant >= 0.8 && < 0.9
                        , servant-server >= 0.8 && < 0.9
                        , text >= 1.2 && < 1.3
                        , warp >= 3.2 && < 3.3
                        , vector >= 0.11 && < 0.12
  ghc-options:          -O2 -threaded
